--- a/Lantern.css
+++ b/Lantern.css
@@ -2,3 +2,8 @@ html{
  background-image:url("https://www.colourbox.com/preview/12110765-national-chinese-seamless-pattern-chinese-new-year-2015-bright-beautiful-vector-illustration-background.jpg");
     
 }
+
+img{
+    width:30px;
+    height:30px;
+}
